eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deliverit-api-service
spec:
  selector:
    app: deliverit-api
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
